get user join ou
