# server/docs/swagger.json
@@ -57,7 +57,7 @@
                 "tags": [
                     "apiOu"
                 ],
-                "summary": "获取部门列表",
+                "summary": "获取组织单位列表",
                 "parameters": [
                     {
                         "type": "string",
@@ -74,7 +74,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "部门列表",
+                        "description": "组织单位列表",
                         "schema": {
                             "allOf": [
                                 {
@@ -111,10 +111,10 @@
                 "tags": [
                     "apiOu"
                 ],
-                "summary": "创建部门",
+                "summary": "创建组织单位",
                 "parameters": [
                     {
-                        "description": "部门信息",
+                        "description": "组织单位信息",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -149,11 +149,11 @@
                 "tags": [
                     "apiOu"
                 ],
-                "summary": "获取部门详情",
+                "summary": "获取组织单位详情",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "部门id",
+                        "description": "组织单位id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -183,17 +183,17 @@
                 "tags": [
                     "apiOu"
                 ],
-                "summary": "更新部门",
+                "summary": "更新组织单位",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "部门id",
+                        "description": "组织单位id",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "部门信息",
+                        "description": "组织单位信息",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -226,11 +226,11 @@
                 "tags": [
                     "apiOu"
                 ],
-                "summary": "删除部门",
+                "summary": "删除组织单位",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "部门id",
+                        "description": "组织单位id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -324,7 +324,7 @@
                                         "list": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/model.Ou"
+                                                "$ref": "#/definitions/model.UserJoinOu"
                                             }
                                         }
                                     }
@@ -401,7 +401,7 @@
                     "200": {
                         "description": "用户详情",
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/model.UserJoinOu"
                         }
                     }
                 }
@@ -542,6 +542,38 @@
                 },
                 "ou_id": {
                     "type": "integer"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.UserJoinOu": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "headerImg": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "ou_id": {
+                    "type": "integer"
+                },
+                "ou_name": {
+                    "type": "string"
                 },
                 "status": {
                     "type": "integer"
